--- a/delivery/get-issue-type/action.yml
+++ b/delivery/get-issue-type/action.yml
@@ -32,10 +32,11 @@ runs:
               }
             }
             `,
-            { issueId: githubIssueId},
-            headers: {
-              GraphQL-Features: 'issue_types'
-            }
+            { issueId: githubIssueId, 
+              headers: {
+                "GraphQL-Features": 'issue_types'
+              }
+            }            
           ).catch(error => {
             core.info(`Error "${error.message}" while trying to find the issue with ID: ${githubIssueId}`);          
           })
