--- a/delivery/get-issue-type/action.yml
+++ b/delivery/get-issue-type/action.yml
@@ -32,9 +32,10 @@ runs:
               }
             }
             `,
-            { issueId: githubIssueId, 
+            { 
+              issueId: githubIssueId, 
               headers: {
-                "GraphQL-Features": 'issue_types'
+                GraphQL-Features: 'issue_types'
               }
             }            
           ).catch(error => {
