--- a/delivery/get-issue-type/action.yml
+++ b/delivery/get-issue-type/action.yml
@@ -42,6 +42,8 @@ runs:
             core.info(`Error "${error.message}" while trying to find the issue with ID: ${githubIssueId}`);          
           })
           
+          console.log(githubIssueNode)
+
           if (githubIssueNode === undefined) {
             core.info(`Unable to find an issue with ID: ${githubIssueId}`)
             return ""
