--- a/.github/workflows/delivery-issue-chores.yml
+++ b/.github/workflows/delivery-issue-chores.yml
@@ -39,6 +39,9 @@ jobs:
         with:
           github_token: ${{ secrets.GH_ISSUES_PRS_CHORES }}      
 
+      - name: Get result
+        run: echo "${{steps.get-issue-type.outputs.result}}"
+
       # Using an official action from GitHub to attach issues to projects
       # https://github.com/marketplace/actions/add-to-github-projects
       - name: Attach needs-triage to the Bugs Triage project
