--- a/delivery/get-issue-type/action.yml
+++ b/delivery/get-issue-type/action.yml
@@ -12,6 +12,7 @@ runs:
   steps:
     - name: Check if an issue exists
       uses: actions/github-script@v7
+      id: get-issue-type
       with:
         github-token: ${{ inputs.github_token }}
         result-encoding: string
@@ -51,7 +52,8 @@ runs:
             core.info(`Unable to find an issue type for issue ID: ${githubIssueId}`)
             return ""
           }
-          
+
           core.info(`An issue with ID: ${githubIssueId} exists, type: ${JSON.stringify(githubIssueNode.node.issueType)}`)
           return githubIssueNode.node.issueType.name
-          
+    - name: Get result
+      run: echo "${{steps.set-result.outputs.result}}"
