--- a/delivery/get-issue-type/action.yml
+++ b/delivery/get-issue-type/action.yml
@@ -7,6 +7,11 @@ inputs:
     description: 'GitHub personal API token'
     required: true
 
+outputs:
+  result:
+    description: "Issue type"
+    value: ${{ steps.get-issue-type.outputs.result }}
+
 runs:
   using: 'composite'
   steps:
@@ -55,6 +60,6 @@ runs:
 
           core.info(`An issue with ID: ${githubIssueId} exists, type: ${JSON.stringify(githubIssueNode.node.issueType)}`)
           return githubIssueNode.node.issueType.name
-    - name: Get result
+    - name: Display issue type
       shell: bash
       run: echo "${{steps.get-issue-type.outputs.result}}"
