--- a/delivery/get-issue/action.yml
+++ b/delivery/get-issue/action.yml
@@ -54,9 +54,16 @@ runs:
           core.debug(JSON.stringify(githubIssueNode))
 
           return {
+            issueNumber: '123'
+            issueType: 'Task'
+          }
+
+          /*
+          return {
             issueNumber: githubIssueNode?.node?.number ?? ''
             issueType: githubIssueNode?.node?.issueType?.name ?? ''
           }
+          */
 
 
     - name: Issue Type
