Removed version from branch

--- a/.github/workflows/delivery-issue-chores.yml
+++ b/.github/workflows/delivery-issue-chores.yml
@@ -34,7 +34,7 @@ jobs:
     steps:
       # Issue type is not available by default, this makes it available for if conditions
       - name: Get Issue type
-        uses: jahia/jahia-modules-action/delivery/get-issue@2280-final-cleanup-on-the-issues-and-prs-chores-workflows
+        uses: jahia/jahia-modules-action/delivery/get-issue@v2
         id: get-issue
         with:
           github_token: ${{ secrets.GH_ISSUES_PRS_CHORES }}      
@@ -184,7 +184,7 @@ jobs:
       # If the issue was moved to a different repository it will not be possible to attach links
       # In that case skip the link creation, which will be handled next time an event happens on the issue
       - name: Check if the issue still exists in the repository
-        uses: jahia/jahia-modules-action/delivery/get-issue@2280-final-cleanup-on-the-issues-and-prs-chores-workflows
+        uses: jahia/jahia-modules-action/delivery/get-issue@v2
         id: issue-exists
         with:
           github_token: ${{ secrets.GH_ISSUES_PRS_CHORES }}
