--- a/.github/workflows/delivery-issue-chores.yml
+++ b/.github/workflows/delivery-issue-chores.yml
@@ -34,11 +34,10 @@ jobs:
     steps:
       # Issue type is not available by default, this makes it available for if conditions
       - name: Get Issue type
-        uses: actions/github-script@v7
-        id: get-issue-type
+        uses: jahia/jahia-modules-action/delivery/get-issue@v2
+        id: get-issue
         with:
-          script: if (context.payload.issue.type !== undefined) {return context.payload.issue.type.name}
-          result-encoding: string
+          github_token: ${{ secrets.GH_ISSUES_PRS_CHORES }}      
 
       # Using an official action from GitHub to attach issues to projects
       # https://github.com/marketplace/actions/add-to-github-projects
@@ -59,7 +58,7 @@ jobs:
       # Add all tickets of Type "Epic" and label "Area:" to the global roadmap project
       - name: Attach all Epics to the Roadmap - Global project
         uses: actions/add-to-project@v1.0.2
-        if: ${{ steps.get-issue-type.outputs.result == 'Epic'}}
+        if: ${{ steps.get-issue.outputs.issue_type == 'Epic'}}
         with:
           project-url: https://github.com/orgs/Jahia/projects/18
           github-token: ${{ secrets.GH_ISSUES_PRS_CHORES }}
@@ -108,7 +107,7 @@ jobs:
           github-security-project: 'Area - Security'
           github-field: 'Jira tickets'
 
-      - name: Attach all tickets with label Area:QA to the Security Roadmap Project
+      - name: Attach all tickets with label Area:Security to the Security Roadmap Project
         uses: actions/add-to-project@v1.0.2
         with:
           project-url: https://github.com/orgs/Jahia/projects/22
@@ -146,7 +145,7 @@ jobs:
       - name: Transfer Issue & Create Stub
         uses: lando/transfer-issue-action@v2
         with:
-          token: ${{ secrets.GH_JAHIACI_ISSUES_CHORES }}        
+          token: ${{ secrets.GH_ISSUES_PRS_CHORES }}        
           router: jahia-only:jahia-private      
       - name: Update Transferred Issue
         uses: actions/github-script@v7
@@ -164,7 +163,7 @@ jobs:
       - name: Transfer Issue for deletion
         uses: lando/transfer-issue-action@v2
         with:
-          token: ${{ secrets.GH_JAHIACI_ISSUES_CHORES }}        
+          token: ${{ secrets.GH_ISSUES_PRS_CHORES }}        
           router: delete:deleted-issues     
 
       # Transfer issues between repositories of the Jahia org
@@ -185,7 +184,7 @@ jobs:
       # If the issue was moved to a different repository it will not be possible to attach links
       # In that case skip the link creation, which will be handled next time an event happens on the issue
       - name: Check if the issue still exists in the repository
-        uses: jahia/jahia-modules-action/delivery/check-issue-exists@v2
+        uses: jahia/jahia-modules-action/delivery/get-issue@v2
         id: issue-exists
         with:
           github_token: ${{ secrets.GH_ISSUES_PRS_CHORES }}
@@ -194,7 +193,7 @@ jobs:
       # We still need to create a Jira User and update the server_host
       - name: Create links to GitHub in Jira issues
         uses: Fgerthoffert/actions-create-jira-link@v1.0.0
-        if: steps.transfer-issue.outputs.new_issue_number != ''
+        if: steps.issue-exists.outputs.issue_number != ''
         with:
           token: ${{ secrets.GH_ISSUES_PRS_CHORES }}
           jira_server_host: jira.jahia.org
