--- a/.github/workflows/delivery-issue-chores.yml
+++ b/.github/workflows/delivery-issue-chores.yml
@@ -39,6 +39,13 @@ jobs:
         with:
           github_token: ${{ secrets.GH_ISSUES_PRS_CHORES }}      
 
+      - name: Display output from the previous step
+        shell: bash
+        run: |
+          echo "JSON Output: ${{ steps.get-issue.outputs.result }}"
+          echo "issueType: ${{ fromJSON(steps.get-issue.outputs.result).issueType }}"
+          echo "issueNumber: ${{ fromJSON(steps.get-issue.outputs.result).issueNumber }}"
+
       # Using an official action from GitHub to attach issues to projects
       # https://github.com/marketplace/actions/add-to-github-projects
       - name: Attach needs-triage to the Bugs Triage project
