--- a/.github/workflows/delivery-issue-chores.yml
+++ b/.github/workflows/delivery-issue-chores.yml
@@ -42,9 +42,8 @@ jobs:
       - name: Display output from the previous step
         shell: bash
         run: |
-          echo "JSON Output: ${{ steps.get-issue.outputs.result }}"
-          echo "issueType: ${{ fromJSON(steps.get-issue.outputs.result).issueType }}"
-          echo "issueNumber: ${{ fromJSON(steps.get-issue.outputs.result).issueNumber }}"
+          echo "issueType: ${{ steps.get-issue.outputs.issue_type }}"
+          echo "issueNumber: ${{ steps.get-issue.outputs.issue_number }}"
 
       # Using an official action from GitHub to attach issues to projects
       # https://github.com/marketplace/actions/add-to-github-projects
