BACKLOG-23313 : rename MPM module to javascript module

--- a/build-step-npm/action.yml
+++ b/build-step-npm/action.yml
@@ -1,5 +1,5 @@
 name: build-step-npm
-description: Build step for Jahia NPM module
+description: Build step for Jahia Javascript module
 
 inputs:
   github_artifact_name:
