--- a/.github/workflows/reusable-delivery-issue-chores.yml
+++ b/.github/workflows/reusable-delivery-issue-chores.yml
@@ -183,7 +183,7 @@ jobs:
         if: steps.issue-exists.outputs.issue_number != ''
         with:
           token: ${{ secrets.GH_ISSUES_PRS_CHORES }}
-          jira_server_host: jira.jahia.org
+          jira_server_host: support.jahia.com
           jira_server_username: ${{ secrets.JIRA_SUPPORT_USERNAME }}
           jira_server_password: ${{ secrets.JIRA_SUPPORT_PASSWORD }}
           github_project_field: "Jira tickets"
