--- a/publish-javascript-module-to-maven-repository/action.yml
+++ b/publish-javascript-module-to-maven-repository/action.yml
@@ -39,7 +39,7 @@ runs:
         echo "GROUP_ID=$(jq '.jahia.maven.groupId' package.json | cut -d\" -f2)" >> $GITHUB_ENV
 
     - name: Build package
-      uses: jahia/jahia-modules-action/build-step-javascript@chore/rename-npm-to-javascript
+      uses: jahia/jahia-modules-action/build-step-javascript@v2
       with:
         module_path: ${{ inputs.module_path }}
         node_version: ${{ inputs.node_version }}
@@ -60,7 +60,7 @@ runs:
 
     - name: Build tests package
       if: ${{ steps.check_test_javascript_module.outputs.files_exists == 'true' }}
-      uses: jahia/jahia-modules-action/build-step-javascript@chore/rename-npm-to-javascript
+      uses: jahia/jahia-modules-action/build-step-javascript@v2
       with:
         module_path: ${{ inputs.module_path }}${{ inputs.tests_module_path }}
         node_version: ${{ inputs.node_version }}
