--- a/release-javascript/action.yml
+++ b/release-javascript/action.yml
@@ -148,7 +148,7 @@ runs:
         echo "MODULE_VERSION=$(jq '.version' package.json | cut -d\" -f2)" >> $GITHUB_ENV
 
     - name: Build package
-      uses: jahia/jahia-modules-action/build-step-javascript@chore/rename-npm-to-javascript
+      uses: jahia/jahia-modules-action/build-step-javascript@v2
       with:
         module_path: ${{ inputs.module_path }}
         node_version: ${{ inputs.node_version }}
