--- a/build-javascript/action.yml
+++ b/build-javascript/action.yml
@@ -1,5 +1,5 @@
-name: Build NPM
-descripion: Build a npm-module
+name: Build Javascript Module
+descripion: Build a Javascript Module
 
 inputs:
   github_artifact_retention:
@@ -10,7 +10,7 @@ inputs:
     required: false
     default: ./
   tests_module_path:
-    description: 'Path to a folder in the repository containing a tests module to be built (Only NPM test module supported)'
+    description: 'Path to a folder in the repository containing a tests module to be built (Only Javascript test module supported)'
     required: false
     default: 'tests/jahia-module/'
   node_version:
@@ -22,21 +22,21 @@ runs:
   using: 'composite'
   steps:
     - name: Build package
-      uses: jahia/jahia-modules-action/build-step-npm@v2
+      uses: jahia/jahia-modules-action/build-step-javascript@v2
       with:
         module_path: ${{ inputs.module_path }}
         node_version: ${{ inputs.node_version }}
         github_artifact_retention: ${{ inputs.github_artifact_retention }}
 
-    - name: Check if test module is present (Only NPM test module is supported)
-      id: check_test_module_npm
+    - name: Check if test module is present (Only Javascript test module is supported)
+      id: check_test_module_javascript
       uses: andstor/file-existence-action@v2
       with:
         files: "${{ inputs.tests_module_path }}package.json"
 
     - name: Build tests package
-      if: ${{ steps.check_test_module_npm.outputs.files_exists == 'true' }}
-      uses: jahia/jahia-modules-action/build-step-npm@v2
+      if: ${{ steps.check_test_module_javascript.outputs.files_exists == 'true' }}
+      uses: jahia/jahia-modules-action/build-step-javascript@v2
       with:
         module_path: ${{ inputs.tests_module_path }}
         node_version: ${{ inputs.node_version }}
