--- a/publish-javascript-module-to-maven-repository/action.yml
+++ b/publish-javascript-module-to-maven-repository/action.yml
@@ -1,4 +1,4 @@
-name: publish NPM
+name: publish javascrip module to maven repository (nexus)
 
 inputs:
   mvn_settings_filepath:
@@ -20,7 +20,7 @@ inputs:
     required: false
     default: ./
   tests_module_path:
-    description: 'Path to a folder in the repository containing a tests module to be built (Only NPM test module supported)'
+    description: 'Path to a folder in the repository containing a tests module to be built (Only Javascript test module supported)'
     required: false
     default: 'tests/jahia-module/'
 
@@ -39,35 +39,35 @@ runs:
         echo "GROUP_ID=$(jq '.jahia.maven.groupId' package.json | cut -d\" -f2)" >> $GITHUB_ENV
 
     - name: Build package
-      uses: jahia/jahia-modules-action/build-step-npm@v2
+      uses: jahia/jahia-modules-action/build-step-javascript@v2
       with:
         module_path: ${{ inputs.module_path }}
         node_version: ${{ inputs.node_version }}
         archive_artifacts: 'false'
         github_artifact_retention: ${{ inputs.github_artifact_retention }}
 
-    - name: Publish to maven
+    - name: Publish to maven repository (Nexus)
       shell: bash
       run: |
         # Run mvn deploy with parameters got from the package.json
         mvn -s ${{ inputs.mvn_settings_filepath }} deploy:deploy-file -Dfile=${{ inputs.module_path }}/target/${{ env.MODULE_NAME }}-v${{ env.MODULE_VERSION }}.tgz -DgroupId=${{ env.GROUP_ID }} -DartifactId=${{ env.MODULE_NAME }} -Dversion=${{ env.MODULE_VERSION }} -Dpackaging=tgz -Durl=${{ env.REPOSITORY_URL }} -DrepositoryId=${{ env.REPOSITORY_ID }}
 
-    - name: Check if test module is present (Only NPM test module is supported)
-      id: check_test_module_npm
+    - name: Check if test module is present (Only javascript module is supported)
+      id: check_test_javascript_module
       uses: andstor/file-existence-action@v2
       with:
         files: "${{ inputs.module_path }}${{ inputs.tests_module_path }}package.json"
 
     - name: Build tests package
-      if: ${{ steps.check_test_module_npm.outputs.files_exists == 'true' }}
-      uses: jahia/jahia-modules-action/build-step-npm@v2
+      if: ${{ steps.check_test_javascript_module.outputs.files_exists == 'true' }}
+      uses: jahia/jahia-modules-action/build-step-javascript@v2
       with:
         module_path: ${{ inputs.module_path }}${{ inputs.tests_module_path }}
         node_version: ${{ inputs.node_version }}
         github_artifact_retention: ${{ inputs.github_artifact_retention }}
 
     - name: Publish tests package to maven
-      if: ${{ steps.check_test_module_npm.outputs.files_exists == 'true' }}
+      if: ${{ steps.check_test_javascript_module.outputs.files_exists == 'true' }}
       shell: bash
       run: |
         # Run mvn deploy with parameters got from the package.json
