fix: rename JavaScript publication action

--- a/publish-javascript/action.yml
+++ b/publish-javascript/action.yml
@@ -1,4 +1,4 @@
-name: publish javascrip module to maven repository (nexus)
+name: publish JavaScript module to maven repository (nexus)
 
 inputs:
   mvn_settings_filepath:
