--- a/code-signer/action.yml
+++ b/code-signer/action.yml
@@ -96,6 +96,7 @@ runs:
             -totp_secret="${{ inputs.totp_secret }}" \
             -output_dir_path="$OUTPUT_DIR" \
             -input_file_path="$INSTALLER_FILE"
+          mv $INSTALLER_FILE "$INSTALLER_FILE.unsigned" # Rename unsigned installer
           cp $OUTPUT_DIR/`basename $INSTALLER_FILE` $INSTALLER_FILE # overwrite original file
         done
         # sign installer exes
@@ -108,6 +109,7 @@ runs:
             -totp_secret="${{ inputs.totp_secret }}" \
             -output_dir_path="$OUTPUT_DIR" \
             $INSTALLER_FILE # -input_file_path option is replaced by last param
+          mv $INSTALLER_FILE "$INSTALLER_FILE.unsigned" # Rename unsigned installer
           cp $OUTPUT_DIR/`basename $INSTALLER_FILE` $INSTALLER_FILE # overwrite original file
         done
     - name: Keep session opened if /tmp/debug file is present
