--- a/release/action.yml
+++ b/release/action.yml
@@ -252,6 +252,7 @@ runs:
         path: |
           **/target/java-bom*
           **/target/classes/javascript/**/bom/*
+          **/target/classes/javascript/cyclonedx/*
           !**/target/checkout/*
         retention-days: ${{ inputs.github_artifact_retention }}
 
