--- a/.github/workflows/reusable-delivery-issue-chores.yml
+++ b/.github/workflows/reusable-delivery-issue-chores.yml
@@ -59,7 +59,7 @@ jobs:
       # Add all tickets of Type "Epic" and label "Area:" to the global roadmap project
       - name: Attach all Epics to the Roadmap - Global project
         uses: actions/add-to-project@v1.0.2
-        if: ${{ steps.get-issue.outputs.issue_type == 'Epic'}}
+        if: ${{ steps.get-issue.issue_type == 'Epic' }}}
         with:
           project-url: https://github.com/orgs/Jahia/projects/18
           github-token: ${{ secrets.GH_ISSUES_PRS_CHORES }}
@@ -68,7 +68,7 @@ jobs:
 
       - name: Create a Security Jira ticket for every new Epic
         uses: jahia/jahia-modules-action/delivery/create-security-ticket@v2
-        if: ${{ steps.get-issue.outputs.issue_type == 'Epic'}}
+        if: ${{ steps.get-issue.issue_type == 'Epic' and context.payload.action == 'opened' }}
         with:
           jira-username: ${{ secrets.JIRA_USERNAME }}
           jira-password: ${{ secrets.JIRA_PASSWORD }}
