feat(ci): create a security for every new epic (#221)

--- a/.github/workflows/reusable-delivery-issue-chores.yml
+++ b/.github/workflows/reusable-delivery-issue-chores.yml
@@ -61,12 +61,21 @@ jobs:
       # Add all tickets of Type "Epic" and label "Area:" to the global roadmap project
       - name: Attach all Epics to the Roadmap - Global project
         uses: actions/add-to-project@v1.0.2
-        if: ${{ steps.get-issue.outputs.issue_type == 'Epic'}}
+        if: ${{ steps.get-issue.outputs.issue_type == 'Epic' }}}
         with:
           project-url: https://github.com/orgs/Jahia/projects/18
           github-token: ${{ secrets.GH_ISSUES_PRS_CHORES }}
           labeled: Area:Product, Area:Delivery, Area:Tech, Area:QA, Area:Security
           label-operator: OR
+
+      - name: Create a Security Jira ticket for every new Epic
+        uses: jahia/jahia-modules-action/delivery/create-security-ticket@v2
+        if: ${{ steps.get-issue.outputs.issue_type == 'Epic' and context.payload.action == 'opened' }}
+        with:
+          jira-username: ${{ secrets.JIRA_USERNAME }}
+          jira-password: ${{ secrets.JIRA_PASSWORD }}
+          github-token: ${{ secrets.GH_ISSUES_PRS_CHORES }}
+          github-security-project: 'Product Team'
 
       - name: Attach all tickets with label Area:QA to the QA Roadmap Project
         uses: actions/add-to-project@v1.0.2
